User handle change implementation, including MySQL connection to Vanilla
